--- a/style2.css
+++ b/style2.css
@@ -25,43 +25,38 @@ font-size: larger;
 
 .introduccion{
     height: 225px;
-    background-color: rgb(127, 198, 216) ;
     /*margin-bottom: 50px;*/
     text-align: justify;
     font-family: 'Do Hyeon', sans-serif;
-    margin-bottom: .10px;
-
+    margin-bottom: 14px;
 }
+
+
+
 
 .marco{
     height:225px ;
-    border: solid rgb(50, 60, 92) ;
+    border: solid rgb(23, 26, 20) ;
     padding: 10px;
+   
 }
 
 .imga
 {
-    border:  solid rgb(50, 60, 92) ;
-    border-radius: 10px;
+
     display: block;
     margin: auto;
-        
+    margin-top: 50px;    
 }
-
-
-
 .contact{
-border:1px solid black;
+
     height: 310px;
-    background-color: rgb(74, 164, 170);
-   
   text-align: justify;
     font-family: 'Do Hyeon', sans-serif;
 }
 .coli{
     border:1px solid black;
     text-align: center;
-    margin-bottom: 10px;
 }
 .titulonoticia{
     text-align: center;
@@ -70,15 +65,21 @@ border:1px solid black;
 .marco2{
     height:268px ;
     border: solid rgb(50, 60, 92) ;
+    background-color: rgb(127, 198, 216) ;
     padding: 10px;
 }
 .footer{
-    height: 180px;
-    background-color: rgb(240, 195, 195);
-    margin-bottom: 50px;
+    height: 145px;
     text-align: center;
     font-family: 'Do Hyeon', sans-serif;
+   
 }
 .prueba{
     visibility: hidden;
+}
+
+
+.fondoblanco{
+    background-color: rgb(199, 213, 216) ;
+    
 }
